--- a/index.html
+++ b/index.html
@@ -626,10 +626,10 @@ function renderItemsLimited() {
 
     const codeText = document.createElement("span");
     codeText.className = "code-text";
-    codeText.textContent = Kod: ${item.productCode};
+    codeText.textContent = `Kod: ${item.productCode}`;
 
     const waLink = document.createElement("a");
-    waLink.href = https://wa.me/${whatsappNumber}?text=${encodeURIComponent(Kod ${item.productCode})};
+    waLink.href = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(`Kod ${item.productCode}`)}`;
     waLink.target = "_blank";
     waLink.className = "wa-link";
 
@@ -675,6 +675,14 @@ document.getElementById("lastUpdated").textContent = new Date().toLocaleDateStri
   });
 </script>
 
-
+  <script>
+function sendView(productId, productName) {
+  const url = `https://script.google.com/macros/s/AKfycbwV10fgPfcsLOM2fxskT8f-NqPqEfWT2WCWbQaHHhQXt38ZYAl81m4O1E9wzqmotrRc7Q/exec?productId=${encodeURIComponent(productId)}&productName=${encodeURIComponent(productName)}`;
+  
+  // Отправим как запрос изображения
+  const img = new Image();
+  img.src = url;
+}
+</script>
 </body>
 </html>
