--- a/index.html
+++ b/index.html
@@ -300,37 +300,37 @@
     <button id="loadMoreBtn">Daha çox göstər</button>
   </main>
 
-  <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-column">
-        <h4>Bizimlə əlaqə</h4>
-        <p><a href="tel:+994702920323">+994 70 292 03 23</a></p>
-        <p><a href="https://api.whatsapp.com/send/?phone=994702920323&text=Salam%21&type=phone_number&app_absent=0" target="_blank">Whatsapp Əlaqə</a></p>
-      </div>
-
-      <div class="footer-column">
-        <h4>Kateqoriyalar</h4>
-        <ul>
-          <li><a href="/">Yeni</a></li>
-          <li><a href="uzukler">Üzüklər</a></li>
-          <li><a href="sirqalar">Sırgalar</a></li>
-          <li><a href="qolbaqlar">Qolbaqlar</a></li>
-          <li><a href="boyunbagilar">Boyunbağılar</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-column">
-        <h4>Sosial Şəbəkələr</h4>
-        <div class="social-icons">
-          <a href="https://www.instagram.com/islimi_jewellery/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Instagram.svg" alt="Instagram"></a>
-        </div>
-      </div>
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-column">
+      <h4>Bizimlə əlaqə</h4>
+      <p><a href="tel:+994702920323">+994 70 292 03 23</p>
+      <p><a href="https://api.whatsapp.com/send/?phone=994702920323&text=Salam%21&type=phone_number&app_absent=0" target="_blank">Whatsapp Əlaqə</a></p>
     </div>
 
-    <div class="footer-bottom">
-      <p>© 2025 Islimi Jewelry | Bütün hüquqlar qorunur</p>
+    <div class="footer-column">
+      <h4>Kateqoriyalar</h4>
+      <ul>
+        <li><a href="/">Yeni</a></li>
+        <li><a href="uzukler">Üzüklər</a></li>
+        <li><a href="sirqalar">Sırgalar</a></li>
+        <li><a href="qolbaqlar">Qolbaqlar</a></li>
+        <li><a href="boyunbagilar">Boyunbağılar</a></li>
+      </ul>
     </div>
-  </footer>
+
+    <div class="footer-column">
+      <h4>Sosial Şəbəkələr</h4>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/islimi_jewellery/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Instagram.svg" alt="Instagram"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2025 Islimi Jewelry | Bütün hüquqlar qorunur</p>
+  </div>
+</footer>
 
   <div class="modal" id="videoModal" onclick="this.classList.remove('active')">
     <video id="modalVideo" controls autoplay></video>
