--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       background-color: #222; color: #fff; padding: 40px 20px 20px; font-size: 14px; margin-top: 60px;
     }
     .footer-content {
-      display: flex; flex-wrap: wrap; justify-content: space-between; max-width: 1200px; margin: 0 авто 20px; gap: 30px;
+      display: flex; flex-wrap: wrap; justify-content: space-between; max-width: 1200px; margin: 0 auto 20px; gap: 30px;
     }
     .footer-column { flex: 1 1 200px; min-width: 180px; }
     .footer-column h4 { margin-bottom: 10px; font-size: 16px; color: var(--accent); }
